feat: add manga module - entities, repos, services, controllers, seed data
- Add MangaSeries, MangaChapter, MangaPage entities with enums
- Add Creator, Genre, Tag entities with slug-based indexes
- Add repositories: MangaRepository, MangaChapterRepository, CreatorRepository, GenreRepository, TagRepository
- Add DTOs: request/response for manga, chapter, genre, tag, creator
- Add services: MangaService, MangaChapterService, GenreService, TagService, CreatorService
- Add controllers: /api/mangas, /api/chapters, /api/genres, /api/tags, /api/creators
- Add MongoIndexConfig for programmatic index management
- Add JwtAuthenticationFilter for stateless JWT auth
- Update SecurityConfig with JWT filter and public read endpoints
- Update DataInitializer with seed data (creators, genres, tags, mangas, chapters)
- Update BaseApiResponse to unified format {data, message, error}
- Add ApiError with code + details
- Fix pom.xml: Spring Boot 3.3.5, Lombok 1.18.36 for Java 21 compat
- Add .mvn/jvm.config for Java 21 module opens